--- a/lainchan/custom.css
+++ b/lainchan/custom.css
@@ -5,3 +5,5 @@ have a Yotsuba B theme selected. */
 /* @import "http://example.com/style.css"; */
 
 .postcontainer { max-width: 700px; }
+
+body { background-color: black; }
